welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: not found: type Direction
		var dir:Direction=Direction.EAST
                        ^ColumnByColumn:3: error: not found: value Direction
		var dir:Direction=Direction.EAST
                                  ^ColumnByColumn:6: error: not found: value Direction
		setDirection(Direction.EAST)
                             ^ColumnByColumn:8: error: not found: value Direction
			setDirection(Direction.NORTH)
                                     ^